<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MantisBT</string>
    <string name="hello_mantis">Hello Mantis!</string>
    <string name="sms">Tape your text here</string>
    <string name="action_settings">Settings</string>
    <string name="please_check">Please check your username and/or your password</string>
    <string name="logo">matis logo</string>
    <string name="user_name">Username</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="forgotpw">Forgot password?</string>
    <string name="login">Login</string>
    <string name="details">Details</string>
    <string name="click">Click here to get more details</string>
    <string name="add_project">Add Project</string>
    <string name="project_name">Project Name</string>
    <string name="description">Description</string>
    <string name="status">Status</string>
    <string name="enter_report_details">Enter Report Details</string>
    <string name="reproducibility">Reproducibility</string>
    <string name="impact">Impact</string>
    <string name="severity">Severity</string>
    <string name="signup">Sign Up</string>
    <string name="priority">Priority</string>
    <string name="assign_to">Assign to</string>
    <string name="summary">Summary</string>
    <string name="author">Written By Zeyd</string>
    <string name="about">Mantis Bug Tracker is a free and open source, web-based bug tracking system released under the terms of the GNU General Public License version 2. The most common use of MantisBT is to track software defects. However, MantisBT is often configured by users to serve as a more generic issue tracking system and project management tool.Now I develop a powerful and easy to use android application with many implemented features and functions</string>
    <string name="planet_prompt">Choose a planet</string>

    <string-array name="status_array">
        <item>development</item>
        <item>release</item>
        <item>stable</item>
        <item>obsolete</item>
    </string-array>
    <string-array name="reproducibility_array">
        <item>always</item>
        <item>sometimes</item>
        <item>random</item>
        <item>have not tried</item>
    </string-array>
    <string-array name="severity_array">
        <item>minor</item>
        <item>tweak</item>
        <item>major</item>
        <item>crash</item>
    </string-array>
    <string-array name="priority_array">
        <item>normal</item>
        <item>high</item>
        <item>urgent</item>
        <item>immediate</item>
    </string-array>
    

</resources>