<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="tn.rnu.ensi.mantisbt.MainActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/logo"
        android:src="@drawable/mantis_logo" />

    <TextView
        android:id="@+id/tvm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="20dp"
        android:text="@string/app_name"
        android:textColor="@color/green"
        android:textStyle="italic|bold" />

    <TextView
        android:id="@+id/tva"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="20dp"
        android:text="@string/about"
        android:textColor="@color/black"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/tvau"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="20dp"
        android:text="@string/author"
        android:textColor="@color/grey"
        android:textStyle="italic|bold" />

</LinearLayout>