<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="tn.rnu.ensi.mantisbt.MainActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/logo"
        android:src="@drawable/mantis_logo" />

    <TextView
        android:id="@+id/tvusename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="40dp"
        android:text="@string/user_name"
        android:textColor="@color/black"
        android:textStyle="italic|bold" />

    <EditText
        android:id="@+id/etusername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/edittextstyle"
        android:ellipsize="start"
        android:gravity="center"
        android:inputType="text"
        android:textColor="@color/grey"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/tvpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textStyle="italic|bold" />

    <EditText
        android:id="@+id/etpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/edittextstyle"
        android:ellipsize="start"
        android:gravity="center"
        android:inputType="textPassword"
        android:textColor="@color/grey"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/tvforgotpw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/forgotpw"
        android:textColor="@color/grey"
        android:clickable="true"
        android:textStyle="italic|bold" />
    <TextView
        android:id="@+id/tvsignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/signup"
        android:textColor="@color/grey"
        android:clickable="true"
        android:textStyle="italic|bold" />

    <ImageButton
        android:id="@+id/btnlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/transparancy"
        android:contentDescription="@string/login"
        android:paddingTop="15dp"
        android:src="@drawable/login"
        android:text="@string/login" />
    
    <TextView
        android:id="@+id/tverror"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="40dp"
        android:text="@string/hello_mantis"
        android:textColor="@color/red"
        android:textStyle="italic|bold"
        android:visibility="invisible" />

</LinearLayout>