<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbarStyle="insideOverlay" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:scrollbars="vertical"
        tools:context="tn.rnu.ensi.mantisbt.MainActivity" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/logo"
            android:src="@drawable/mantis_logo" />

        <TextView
            android:id="@+id/details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/details"
            android:textColor="@color/green"
            android:textStyle="italic|bold" />

        <TextView
            android:id="@+id/tvpn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/project_name"
            android:textColor="@color/black"
            android:textStyle="italic|bold" />

        <TextView
            android:id="@+id/tvpn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:textStyle="italic|bold" />

        <TextView
            android:id="@+id/tvassignto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/assign_to"
            android:textColor="@color/black"
            android:textStyle="italic|bold" />

        <TextView
            android:id="@+id/tvassignto2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:textStyle="italic|bold" />

        <TextView
            android:id="@+id/tvr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/reproducibility"
            android:textColor="@color/black"
            android:textStyle="italic|bold" />

        <TextView
            android:id="@+id/tvr2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:textStyle="italic|bold" />

        <TextView
            android:id="@+id/tvseverity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/severity"
            android:textColor="@color/black"
            android:textStyle="italic|bold" />

        <TextView
            android:id="@+id/tvseverity2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:textStyle="italic|bold" />

        <TextView
            android:id="@+id/tvp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/priority"
            android:textColor="@color/black"
            android:textStyle="italic|bold" />

        <TextView
            android:id="@+id/tvp2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:textStyle="italic|bold" />

        <TextView
            android:id="@+id/tvs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/summary"
            android:textColor="@color/black"
            android:textStyle="italic|bold" />

        <TextView
            android:id="@+id/tvs2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:textStyle="italic|bold" />
        
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/btnedit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/transparancy"
            android:contentDescription="@string/add_project"
            android:paddingTop="5dp"
            android:layout_weight="1"
            android:src="@drawable/edit" />

        <ImageButton
            android:id="@+id/btndelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/transparancy"
            android:contentDescription="@string/add_project"
            android:paddingTop="5dp"
            android:layout_weight="1"
            android:src="@drawable/delete" />
    </LinearLayout>
    </LinearLayout>

</ScrollView>