<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="tn.rnu.ensi.mantisbt.MainActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/logo"
        android:src="@drawable/mantis_logo" />

    <TextView
        android:id="@+id/tvm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="20dp"
        android:text="@string/logo"
        android:textColor="@color/green"
        android:textStyle="italic|bold" />
    <TextView
        android:id="@+id/tvsms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="40dp"
        android:text="@string/sms"
        android:textColor="@color/black"
        android:textStyle="italic|bold" />

    <EditText
        android:id="@+id/etsms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/edittextstyle"
        android:ellipsize="start"
        android:gravity="center"
        android:inputType="text"
        android:textColor="@color/grey"
        android:textStyle="italic" />

    

    <ImageButton 
        android:id="@+id/ibsms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:contentDescription="@string/hello_mantis"
        android:text="@string/app_name"
        android:paddingTop="30dp"
        android:src="@drawable/sms"/>
</LinearLayout>