<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbarStyle="insideOverlay" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:scrollbars="vertical"
        tools:context="tn.rnu.ensi.mantisbt.MainActivity" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/logo"
            android:src="@drawable/mantis_logo" />

        <TextView
            android:id="@+id/tverd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/enter_report_details"
            android:textColor="@color/green"
            android:textStyle="italic|bold" />

        <TextView
            android:id="@+id/tvpn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/project_name"
            android:textColor="@color/black"
            android:textStyle="italic|bold" />

        <Spinner
            android:id="@+id/projectnamespinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/edittextstyle"
            android:ellipsize="start"
            android:inputType="text"
            android:popupBackground="@color/white"
            android:textColor="@color/grey"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tvassignto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/assign_to"
            android:textColor="@color/black"
            android:textStyle="italic|bold" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/edittextstyle"
            android:ellipsize="start"
            android:inputType="text"
            android:popupBackground="@color/white"
            android:textColor="@color/grey"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tvr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reproducibility"
            android:textColor="@color/black"
            android:textStyle="italic|bold" />

        <Spinner
            android:id="@+id/reproducibilityspinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/edittextstyle"
            android:divider="#66BC31"
            android:ellipsize="start"
            android:inputType="text"
            android:popupBackground="@color/white"
            android:textColor="@color/grey"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tvseverity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/severity"
            android:textColor="@color/black"
            android:textStyle="italic|bold" />

        <Spinner
            android:id="@+id/severityspinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/edittextstyle"
            android:ellipsize="start"
            android:inputType="text"
            android:popupBackground="@color/white"
            android:textColor="@color/grey"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tvp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/priority"
            android:textColor="@color/black"
            android:textStyle="italic|bold" />

        <Spinner
            android:id="@+id/priorityspinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/edittextstyle"
            android:ellipsize="start"
            android:inputType="text"
            android:popupBackground="@color/white"
            android:textColor="@color/grey"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tvs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/summary"
            android:textColor="@color/black"
            android:textStyle="italic|bold" />

        <EditText
            android:id="@+id/ets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/edittextstyle"
            android:ellipsize="start"
            android:inputType="text"
            android:lines="4"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/grey"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tvd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textStyle="italic|bold" />

        <EditText
            android:id="@+id/etd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/edittextstyle"
            android:ellipsize="start"
            android:inputType="text"
            android:lines="4"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/grey"
            android:textStyle="italic" />

        <ImageButton
            android:id="@+id/bta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/transparancy"
            android:contentDescription="@string/add_project"
            android:paddingTop="5dp"
            android:src="@drawable/buttonadd" />
    </LinearLayout>

</ScrollView>