<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".NewProjectActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/logo"
        android:src="@drawable/mantis_logo" />

    <TextView
        android:id="@+id/tvaddproject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:text="@string/details"
        android:textColor="@color/green"
        android:textStyle="italic|bold" />

    <TextView
        android:id="@+id/tvprojectname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/project_name"
        android:textColor="@color/black"
        android:textStyle="italic|bold" />

    <EditText
        android:id="@+id/etprojectname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/edittextstyle"
        android:ellipsize="start"
        android:inputType="text"
        android:textColor="@color/grey"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/tvstatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:textColor="@color/black"
        android:textStyle="italic|bold" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/edittextstyle"
        android:ellipsize="start"
        android:inputType="text"
        android:popupBackground="@color/white"
        android:prompt="@string/status"
        android:textColor="@color/grey"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/tvdescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textColor="@color/black"
        android:textStyle="italic|bold" />

    <EditText
        android:id="@+id/etdescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/edittextstyle"
        android:ellipsize="start"
        android:inputType="text"
        android:lines="4"
        android:textColor="@color/grey"
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/btnedit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/transparancy"
            android:contentDescription="@string/add_project"
            android:paddingTop="5dp"
            android:layout_weight="1"
            android:src="@drawable/edit" />

        <ImageButton
            android:id="@+id/btndelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/transparancy"
            android:contentDescription="@string/add_project"
            android:paddingTop="5dp"
            android:layout_weight="1"
            android:src="@drawable/delete" />
    </LinearLayout>
</LinearLayout>