<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="tn.rnu.ensi.mantisbt.MainActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/logo"
        android:src="@drawable/mantis_logo" />

    <TextView
        android:id="@+id/tvun"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="20dp"
        android:textStyle="italic|bold"
        android:text="@string/user_name"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/etun"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="15dp"
        android:textColor="@color/grey"
        android:layout_marginRight="15dp"
        android:background="@drawable/edittextstyle"
        android:ellipsize="start"
        android:textStyle="italic"
        android:gravity="center"
        android:inputType="text" />

    <TextView
        android:id="@+id/tvpw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/password"
        android:textStyle="italic|bold"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/etpw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/edittextstyle"
        android:ellipsize="start"
        android:gravity="center"
        android:textColor="@color/grey"
        android:textStyle="italic"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/tve"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/email"
        android:textStyle="italic|bold"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/ete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/edittextstyle"
        android:ellipsize="start"
        android:gravity="center"
        android:inputType="textEmailAddress"
        android:textColor="@color/grey"
        android:textStyle="italic"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageButton
        android:id="@+id/btnsu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="5dp"
        android:src="@drawable/signup"
        android:background="@color/transparancy"
        android:contentDescription="@string/signup"
        android:text="@string/signup" />
    

</LinearLayout>